plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
	id 'com.google.cloud.tools.jib' version '3.4.3'
}

group = 'travelmate'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	//
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// add
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'jakarta.persistence:jakarta.persistence-api:3.0.0'
	implementation 'org.hibernate.orm:hibernate-core:6.1.7.Final'
	implementation 'io.github.cdimascio:java-dotenv:5.2.2'

	// oAuth
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
}

tasks.named('test') {
	useJUnitPlatform()
}

def dockerhubUsername = System.getenv("DOCKERHUB_USERNAME") ?: "defaultUsername"
def dockerhubPassword = System.getenv("DOCKERHUB_PASSWORD") ?: "defaultPassword"
def targetImageName = System.getenv("IMAGE_NAME") ?: "defaultImageName"

jib {
	from {
		image = "eclipse-temurin:17-jre"
		auth {
			username = dockerhubUsername
			password = dockerhubPassword
		}
	}
	to {
		image = targetImageName
		auth {
			username = dockerhubUsername
			password = dockerhubPassword
		}
	}
	container {
		jvmFlags = ["-Dspring.profiles.active=prod"]
		creationTime = "USE_CURRENT_TIMESTAMP"
	}
}
